# serializer version: 1
# name: test_basic_sqlmodel_feature_creation
  'd7b29b90a0189084ce830c7e4dc76624e8abb44744ed82a18b5d0449f0739928'
# ---
# name: test_composite_key_multiple_columns
  dict({
    'id_columns': list([
      'user_id',
      'session_id',
      'timestamp',
    ]),
    'metaxy_feature_version': '251b5f1d6cf4fc554da752e758ea7524a01e5f6160b50eeeffbbc672514f7c65',
    'metaxy_provenance_by_field': dict({
      'event': '0e1c4ff52c78531ffe409d2ec18d0fe20a28a6a955666c185dc36c59625ae656',
      'metric': '3f943f7bebadf7fc11989e6419eabde9ca44a17d77cb0976b667628e1d4a2fb9',
    }),
  })
# ---
# name: test_feature_version_method
  '1d0dde62c113307f47edbac71bd43064f914735c1df7c7ce2d30163b5b0deb40'
# ---
# name: test_feature_with_dependencies
  dict({
    'child': 'f5609fc0467446b76d2eb4d1dc7317e62aa9782a61a3357741f1e2901f743b3a',
    'parent': '734df67d44e731a7b5687c43a3f809ad749565f263bd822cfd40c50031f31d10',
  })
# ---
# name: test_feature_with_field_dependencies
  'bbee5ac35083c47d7a98a805f2e83e473bcb0796931e518b97bd3cad7598e64b'
# ---
# name: test_graph_snapshot_inclusion
  '88c4365cba5fe82fd5a93743c156631fe676ddea4014d991d34529bb397ac8b2'
# ---
# name: test_provenance_method
  dict({
    'embeddings': '072b1924ad607ebd51b35a9420e2cca977084bd89635295bc31a9e836241036b',
    'processed_data': '168d29320093e6d2ac5be6da0eb586415aef1326f074bca039afff80fd113910',
  })
# ---
# name: test_sqlmodel_duckdb_custom_id_columns
  dict({
    'child': list([
      dict({
        'metaxy_data_version': '4f1374067ee99f99709938ce590ce47d',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t1',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '022b4e6b663312da71788eb70640b898b5ffeec04962ab45014c033d8935d79c',
        'metaxy_materialization_id': None,
        'metaxy_provenance': '4f1374067ee99f99709938ce590ce47d',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t1',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 10,
        'summary': 'User 1 Session 10',
        'total_duration': 30.5,
        'user_id': 1,
      }),
      dict({
        'metaxy_data_version': 'ad796a86cd69c7946641bdd1acde5070',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t2',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '022b4e6b663312da71788eb70640b898b5ffeec04962ab45014c033d8935d79c',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'ad796a86cd69c7946641bdd1acde5070',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t2',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 20,
        'summary': 'User 1 Session 20',
        'total_duration': 45.0,
        'user_id': 1,
      }),
      dict({
        'metaxy_data_version': 'f886b7b4fe5b659a67ab5bdad8cb77ba',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t3',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '022b4e6b663312da71788eb70640b898b5ffeec04962ab45014c033d8935d79c',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'f886b7b4fe5b659a67ab5bdad8cb77ba',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t3',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 10,
        'summary': 'User 2 Session 10',
        'total_duration': 15.0,
        'user_id': 2,
      }),
      dict({
        'metaxy_data_version': 'e25f0d6b84ca988fe908fcbf91f458b8',
        'metaxy_data_version_by_field': dict({
          'total_duration': 'hash_t4',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '022b4e6b663312da71788eb70640b898b5ffeec04962ab45014c033d8935d79c',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'e25f0d6b84ca988fe908fcbf91f458b8',
        'metaxy_provenance_by_field': dict({
          'total_duration': 'hash_t4',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 30,
        'summary': 'User 2 Session 30',
        'total_duration': 60.0,
        'user_id': 2,
      }),
    ]),
    'parent': list([
      dict({
        'activity_type': 'read',
        'duration': 30.5,
        'metaxy_data_version': '995a432fd670c3105fc8a38d1f8475ac',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a1',
          'duration': 'hash_d1',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '41d04e70aa898a9e55ec58ab159096021ab005e134cd44905abd9244a86dc666',
        'metaxy_materialization_id': None,
        'metaxy_provenance': '995a432fd670c3105fc8a38d1f8475ac',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a1',
          'duration': 'hash_d1',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 10,
        'timestamp': 1000,
        'user_id': 1,
      }),
      dict({
        'activity_type': 'write',
        'duration': 45.0,
        'metaxy_data_version': 'cb6abbd85c82e8812f0af9305615bb71',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a2',
          'duration': 'hash_d2',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '41d04e70aa898a9e55ec58ab159096021ab005e134cd44905abd9244a86dc666',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'cb6abbd85c82e8812f0af9305615bb71',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a2',
          'duration': 'hash_d2',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 20,
        'timestamp': 1100,
        'user_id': 1,
      }),
      dict({
        'activity_type': 'read',
        'duration': 15.0,
        'metaxy_data_version': 'f1348785a56e432b949f829ad9410fd9',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a3',
          'duration': 'hash_d3',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '41d04e70aa898a9e55ec58ab159096021ab005e134cd44905abd9244a86dc666',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'f1348785a56e432b949f829ad9410fd9',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a3',
          'duration': 'hash_d3',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 10,
        'timestamp': 1200,
        'user_id': 2,
      }),
      dict({
        'activity_type': 'read',
        'duration': 60.0,
        'metaxy_data_version': 'cddc3f003f22541f96160423b51671d4',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a4',
          'duration': 'hash_d4',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '41d04e70aa898a9e55ec58ab159096021ab005e134cd44905abd9244a86dc666',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'cddc3f003f22541f96160423b51671d4',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a4',
          'duration': 'hash_d4',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 30,
        'timestamp': 1300,
        'user_id': 2,
      }),
      dict({
        'activity_type': 'write',
        'duration': 25.5,
        'metaxy_data_version': 'cc22fa56e905c9ffb50d5622f85151ff',
        'metaxy_data_version_by_field': dict({
          'activity_type': 'hash_a5',
          'duration': 'hash_d5',
        }),
        'metaxy_deleted_at': None,
        'metaxy_feature_version': '41d04e70aa898a9e55ec58ab159096021ab005e134cd44905abd9244a86dc666',
        'metaxy_materialization_id': None,
        'metaxy_provenance': 'cc22fa56e905c9ffb50d5622f85151ff',
        'metaxy_provenance_by_field': dict({
          'activity_type': 'hash_a5',
          'duration': 'hash_d5',
        }),
        'metaxy_snapshot_version': '55305d6011723f96c0cd5619faaa789f4cfa4bc68a5d791dd4a5ff4a91aa1d4e',
        'session_id': 10,
        'timestamp': 1400,
        'user_id': 3,
      }),
    ]),
  })
# ---
# name: test_sqlmodel_feature_id_columns_with_joins
  dict({
    'expected_join': list([
      tuple(
        1,
        '2024-01-01',
      ),
      tuple(
        1,
        '2024-01-02',
      ),
      tuple(
        2,
        '2024-01-01',
      ),
      tuple(
        3,
        '2024-01-01',
      ),
    ]),
    'feature_a_rows': list([
      tuple(
        1,
        '2024-01-01',
      ),
      tuple(
        1,
        '2024-01-02',
      ),
      tuple(
        2,
        '2024-01-01',
      ),
      tuple(
        2,
        '2024-01-02',
      ),
      tuple(
        3,
        '2024-01-01',
      ),
    ]),
    'feature_b_rows': list([
      tuple(
        1,
        '2024-01-01',
      ),
      tuple(
        1,
        '2024-01-02',
      ),
      tuple(
        2,
        '2024-01-01',
      ),
      tuple(
        3,
        '2024-01-01',
      ),
    ]),
  })
# ---
# name: test_sqlmodel_feature_multiple_fields
  '5af13273b2c95417cf75ad5a075cb43218939d3688cc8c6b2c0e9a4c55858eaf'
# ---
# name: test_sqlmodel_feature_with_duckdb_store
  list([
    dict({
      'duration': 120.5,
      'metaxy_data_version': '053d3dcf495f8a9d212fc12c0f22d6c3',
      'metaxy_data_version_by_field': dict({
        'duration': 'hash1',
        'frames': 'hash1',
      }),
      'metaxy_deleted_at': None,
      'metaxy_feature_version': '1a8d62c84df823421daebf2f827dc0ef5104e9f9045f7fba9c1b4478f421ccd6',
      'metaxy_materialization_id': None,
      'metaxy_provenance': '053d3dcf495f8a9d212fc12c0f22d6c3',
      'metaxy_provenance_by_field': dict({
        'duration': 'hash1',
        'frames': 'hash1',
      }),
      'metaxy_snapshot_version': 'be9659f7d9837037bf7bf0ca3ed25838c4b6acdc5d0020ccce2fe7fd58ed75dd',
      'path': '/videos/v1.mp4',
      'sample_uid': 1,
    }),
    dict({
      'duration': 90.0,
      'metaxy_data_version': '481a8aa07b85907e2dd108bde8d9b8a9',
      'metaxy_data_version_by_field': dict({
        'duration': 'hash2',
        'frames': 'hash2',
      }),
      'metaxy_deleted_at': None,
      'metaxy_feature_version': '1a8d62c84df823421daebf2f827dc0ef5104e9f9045f7fba9c1b4478f421ccd6',
      'metaxy_materialization_id': None,
      'metaxy_provenance': '481a8aa07b85907e2dd108bde8d9b8a9',
      'metaxy_provenance_by_field': dict({
        'duration': 'hash2',
        'frames': 'hash2',
      }),
      'metaxy_snapshot_version': 'be9659f7d9837037bf7bf0ca3ed25838c4b6acdc5d0020ccce2fe7fd58ed75dd',
      'path': '/videos/v2.mp4',
      'sample_uid': 2,
    }),
    dict({
      'duration': 150.3,
      'metaxy_data_version': '53bd7b6f9af3a3fe4fa021fbf389e64d',
      'metaxy_data_version_by_field': dict({
        'duration': 'hash3',
        'frames': 'hash3',
      }),
      'metaxy_deleted_at': None,
      'metaxy_feature_version': '1a8d62c84df823421daebf2f827dc0ef5104e9f9045f7fba9c1b4478f421ccd6',
      'metaxy_materialization_id': None,
      'metaxy_provenance': '53bd7b6f9af3a3fe4fa021fbf389e64d',
      'metaxy_provenance_by_field': dict({
        'duration': 'hash3',
        'frames': 'hash3',
      }),
      'metaxy_snapshot_version': 'be9659f7d9837037bf7bf0ca3ed25838c4b6acdc5d0020ccce2fe7fd58ed75dd',
      'path': '/videos/v3.mp4',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_sqlmodel_id_columns_in_snapshot
  dict({
    'id_columns': list([
      'customer_id',
      'order_id',
    ]),
    'metaxy_feature_version': 'a035349dabfed08bee0bd6f0d5631ff5aaf5285488b915fe3d5ca64bda42cc2b',
  })
# ---
# name: test_sqlmodel_rename_validation_with_store
  dict({
    'dep_columns': tuple(
      'status',
      'priority',
    ),
    'dep_key': 'source/feature',
    'dep_rename': dict({
      'priority': 'source_priority',
      'status': 'source_status',
    }),
  })
# ---
# name: test_version_changes_with_code_version
  dict({
    'v1': 'b20eb9151a785331e8094ebe3e86f459f427f158b42178f9504f6908d11b4d5a',
    'v2': '8826af99bb73ef997a26da65fc368392b40f36adcfa5d8f960c0019218e6ef2d',
  })
# ---
